20190820 固定ページ&お問い合わせフォーム追加

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,13 @@
   </head>
 
   <body>
+    <%= render "layouts/header" %>
+
+    <%= flash[:notice] if flash[:notice].present? %>
+    <%= flash[:error] if flash[:error].present? %>
+
     <%= yield %>
+
+    <%= render "layouts/footer" %>
   </body>
 </html>
